--- a/config.example.yaml
+++ b/config.example.yaml
@@ -3,7 +3,7 @@ ShowSql: false # 是否打印sql
 
 IgnoreGzhConfig: /data/ignore_gzh.txt  # 需要过滤的公众号可以配置到这个文件中，一行一个
 
-PublishApi: https://mlog.club/article/wxpublish
+PublishApi: https://mlog.club/api/article/wxpublish
 PublishToken: token请自己定义
 
 # 阿里云oss配置
